@@ -1,5 +1,5 @@
 # Set root logger level and appender
-log4j.rootLogger=INFO, A1
+log4j.rootLogger=DEBUG, A1
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
